
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_3__ ;
typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_5__ {int availableList; } ;
struct TYPE_4__ {int outLink; int inLink; } ;
typedef TYPE_1__* RWConflict ;


 TYPE_3__* RWConflictPool ;
 int SHMQueueDelete (int *) ;
 int SHMQueueInsertBefore (int *,int *) ;

__attribute__((used)) static void
ReleaseRWConflict(RWConflict conflict)
{
 SHMQueueDelete(&conflict->inLink);
 SHMQueueDelete(&conflict->outLink);
 SHMQueueInsertBefore(&RWConflictPool->availableList, &conflict->outLink);
}
